methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:39: error: Invalid literal number
  for (i <- 0to2)
            ^PictureMono2:55: error: Invalid literal number
  for (j <- 0to2)
            ^PictureMono2:39: error: illegal start of simple expression
  for (i <- 0to2)
            ^PictureMono2:49: error: ')' expected but '}' found.
}
^PictureMono2:55: error: illegal start of simple expression
  for (j <- 0to2)
            ^PictureMono2:67: error: ')' expected but '}' found.
} 
^